# intern

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/intern/: config.hpp  default_string_traits.hpp  interner.hpp  interner_demo_traits.hpp  string_far.hpp  string_io.hpp  string_ops.hpp  string_sso_tiny.hpp  string_sso_v1.hpp  string_sso_v2.hpp
include/intern/details/: metadata.hpp  string_common.hpp  utils.hpp
test/: common.h  internals.cpp  main.cpp  simple_example.cpp  test_interner.cpp  test_interner.h  test_interner0.cpp  test_interner1.cpp  test_interner2.cpp  test_interner3.cpp  test_interner4.cpp  test_interner5.cpp  words.txt
